🐛 Fix "style/gap-between-sections"

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 body {
   overflow: hidden;
 }
-.btn-wizard-nav-submit {
-  display: none !important;
+
+.formio-wizard-nav-container {
+  display: none;
 }
